Design new app architure using Seneca framework

--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "dependencies": {
         "body-parser": "^1.15.2",
         "botkit": "^0.6.15",
+        "botkit-helper-slack": "^0.1.0",
         "cookie-parser": "^1.4.3",
         "express": "^4.14.0",
         "express-hbs": "^1.0.4",
-        "node-env-file": "^0.1.8",
-        "request": "^2.79.0",
-        "botkit-helper-slack": "^0.1.0",
         "google-translate-api": "^2.3.0",
         "log4js": "^3.0.2",
+        "node-env-file": "^0.1.8",
+        "request": "^2.79.0",
+        "seneca": "^3.7.0",
         "sqlite3": "^4.0.1"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@types/bluebird": "^3.5.24",
+        "@types/google-translate-api": "^2.3.0",
+        "@types/seneca": "^2.1.9"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/siquylee/slack-translator.git"
