--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "^4.14.0",
         "express-hbs": "^1.0.4",
         "google-translate-api": "^2.3.0",
+        "i18n-nodejs": "^3.0.0",
         "log4js": "^3.0.2",
         "node-env-file": "^0.1.8",
         "request": "^2.79.0",
