Add Google Analytics plugin

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "botkit": "^0.6.15",
         "botkit-helper-slack": "^0.1.0",
         "cookie-parser": "^1.4.3",
+        "electron-google-analytics": "^0.1.0",
         "express": "^4.14.0",
         "express-hbs": "^1.0.4",
         "google-translate-api": "^2.3.0",
@@ -20,7 +21,8 @@
         "request": "^2.79.0",
         "seneca": "^3.7.0",
         "slack-message-builder": "^1.2.1",
-        "sqlite3": "^4.0.1"
+        "sqlite3": "^4.0.1",
+        "wordcount": "^1.1.1"
     },
     "devDependencies": {
         "@types/google-translate-api": "^2.3.0",
